--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.10.0",
     "next": "15.1.4",
     "nodemailer": "^6.9.16",
     "react": "^19.0.0",
